--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -e .
 
       - name: Create .env file
         run: |
@@ -32,6 +33,6 @@ jobs:
       - name: Run Python script
         run: |
           python -c "
-          from tarotAI import tell
+          from tarotai import tell;
           tell(useReversed=True)
           "
